<resources>
    <string name="app_name" translatable="true">Perfex App</string>
    <string name="tab_dashboard" translatable="true">Dashboard</string>
    <string name="tab_customers" translatable="false">Customers</string>
    <string name="tab_projects" translatable="false">Projects</string>
    <string name="tab_tasks" translatable="false">Tasks</string>
    <string name="tab_support" translatable="false">Support</string>
    <string name="tab_leads" translatable="false">Leads</string>
    <string name="tab_profile" translatable="false">Profile</string>
    <string name="tab_task" translatable="false">Task</string>
    <string name="tab_reminders" translatable="false">Reminders</string>
    <string name="tab_notes" translatable="false">Notes</string>
    <string name="tab_activity_log" translatable="false">Activity Log</string>
    <string name="tab_contacts" translatable="false">Contacts</string>
    <string name="tab_invoices" translatable="false">Invoices</string>
    <string name="tab_proposals" translatable="false">Proposals</string>
    <string name="not_started" translatable="false">Not Started</string>
    <string name="waiting_feedback" translatable="false">Awaiting Feedback</string>
    <string name="testing" translatable="false">Testing</string>
    <string name="in_progress" translatable="false">In Progress</string>
    <string name="complete" translatable="false">Complete</string>
    <string name="low_priority" translatable="false">Low</string>
    <string name="medium_priority" translatable="false">Medium</string>
    <string name="high_priority" translatable="false">High</string>
    <string name="urgent_priority" translatable="false">Urgent</string>
    <string name="related_to_search" translatable="false">Search</string>
    <string name="related_to_lead" translatable="false">Lead</string>
    <string name="related_to_customer" translatable="false">Customer</string>
    <string name="days" translatable="false">Day(s)</string>
    <string name="weeks" translatable="false">Week(s)</string>
    <string name="months" translatable="false">Month(s)</string>
    <string name="years" translatable="false">Year(s)</string>
    <string name="one_week" translatable="false">1 Week</string>
    <string name="two_weeks" translatable="false">2 Weeks</string>
    <string name="one_month" translatable="false">1 Month</string>
    <string name="two_months" translatable="false">2 Months</string>
    <string name="three_months" translatable="false">3 Months</string>
    <string name="six_months" translatable="false">6 Months</string>
    <string name="one_year" translatable="false">1 Year</string>
    <string name="custom_repeat" translatable="false">Custom</string>
    <string name="company_name" translatable="false">Company Name</string>
    <string name="start_timer" translatable="false">Start Timer</string>
    <string name="recurring" translatable="false">Recurring</string>
    <string name="stop_timer" translatable="false">Stop Timer</string>
    <string name="add_lead" translatable="false">Add Lead</string>
    <string name="add_reminder" translatable="false">Add Reminder</string>
    <string name="add_notes" translatable="false">Add Notes</string>
    <string name="field_required" translatable="false">This field is required</string>
    <string name="contacted_today" translatable="false">Contacted Today</string>
    <string name="first_name" translatable="false">First Name</string>
    <string name="last_name" translatable="false">Last Name</string>
    <string name="send_set_password_email" translatable="false">Send SET password email</string>
    <string name="do_not_send_welcome_email" translatable="false">Do not send welcome email</string>
    <string name="related_to_type" translatable="false">Related To</string>
    <string name="hourly_rate" translatable="false">Hourly Rate</string>
    <string name="due_date" translatable="false">Due Date</string>
    <string name="helper_source" translatable="false">Please Select Source</string>
    <string name="helper_assigned" translatable="false">Assign a staff</string>
    <string name="zero" translatable="false">0</string>
    <string name="search_here" translatable="false">Search</string>
    <string name="add_customer" translatable="false">Add Customer</string>
    <string name="date" translatable="false">Date</string>
    <string name="start_date_and_end_date" translatable="false">%s - %s</string>
    <string name="call_duration_with_date" translatable="false">%s %s:%s:%s</string>
    <string name="add" translatable="false">Add</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="start_date" translatable="false">Start Date</string>
    <string name="update" translatable="false">Update</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="address" translatable="false">Address</string>
    <string name="choose_file" translatable="false">Choose File</string>
    <string name="channel_name" translatable="false">Importing Notification</string>
    <string name="channel_description" translatable="false">This notification will show whenever you get any notification on the CRM</string>
    <string name="welcome_to_perfex_crm" translatable="false">Welcome to perfex CRM</string>
    <string name="login" translatable="false">Login</string>
    <string name="good" translatable="false">Good</string>
    <string name="morning" translatable="false">Morning</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="forgot_password" translatable="false">Forgot Password</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="notification" translatable="false">Notification</string>
    <string name="notifications" translatable="false">Notifications</string>
    <string name="add_leads" translatable="false">Add Lead</string>
    <string name="total_0" translatable="false">Total: 0</string>
    <string name="filtered_0" translatable="false">Filtered: 0</string>
    <string name="total_count" translatable="false">Total: %d</string>
    <string name="total_filtered" translatable="false">Filtered: %d</string>
    <string name="dial_call" translatable="false">Dial Call</string>
    <string name="customer_image" translatable="false">Customer Image</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="back_btn" translatable="false">Back</string>
    <string name="convert" translatable="false">Convert</string>
    <string name="task_title" translatable="false">#%s - %s</string>
    <string name="name_text" translatable="false">Name</string>
    <string name="position_text" translatable="false">Position</string>
    <string name="email_address" translatable="false">Email</string>
    <string name="website_text" translatable="false">Website</string>
    <string name="phone_text" translatable="false">PhoneNumber</string>
    <string name="lead_value_text" translatable="false">LeadValue</string>
    <string name="company_text" translatable="false">Company</string>
    <string name="address_text" translatable="false">Address</string>
    <string name="city_text" translatable="false">City</string>
    <string name="state_text" translatable="false">State</string>
    <string name="country_text" translatable="false">Country</string>
    <string name="zip_code_text" translatable="false">Zip Code</string>
    <string name="description_text" translatable="false">Description</string>
    <string name="general_information" translatable="false">General Information</string>
    <string name="status_text" translatable="false">Status</string>
    <string name="source_text" translatable="false">Source</string>
    <string name="default_language_text" translatable="false">Default Language</string>
    <string name="assigned" translatable="false">Assigned</string>
    <string name="created" translatable="false">Created</string>
    <string name="last_contact" translatable="false">Last Contact</string>
    <string name="public_text" translatable="false">Public</string>
    <string name="lead_information" translatable="false">Lead Information</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="add_task" translatable="false">Add Task</string>
    <string name="please_select_priority" translatable="false">Please select priority</string>
    <string name="subject" translatable="false">Please enter subject</string>
    <string name="repeat_every" translatable="false">Repeat Every</string>
    <string name="billable" translatable="false">Billable</string>
    <string name="not_billable" translatable="false">Not Billable</string>
    <string name="total_cycles" translatable="false">Total Cycles(0) for infinite</string>
    <string name="repeat_every_custom_count" translatable="false">Enter Count</string>
    <string name="description" translatable="false">Please enter description</string>
    <string name="date_time_string" translatable="false">%s-%s-%s</string>
    <string name="lead_touched" translatable="false">I got in touch with this lead</string>
    <string name="select_date" translatable="false">Please select date</string>
    <string name="save" translatable="false">Save</string>
    <string name="close" translatable="false">Close</string>
    <string name="data_with_title" translatable="false">%s: %s</string>
    <string name="send_email_for_reminder" translatable="false">Send email for reminder</string>
    <string name="notified" translatable="false">Notified: %s</string>
    <string name="set_date" translatable="false">Select Date</string>
    <string name="add_log" translatable="false">Add Log</string>
    <string name="convert_to_customer" translatable="false">Convert To Customer</string>
    <string name="position" translatable="false">Position</string>
    <string name="company" translatable="false">Company Name</string>
    <string name="phone" translatable="false">PhoneNumber</string>
    <string name="website" translatable="false">Website</string>
    <string name="city" translatable="false">City</string>
    <string name="state" translatable="false">State</string>
    <string name="helper_country" translatable="false">Please select Country</string>
    <string name="zip_code" translatable="false">Zip Code</string>
    <string name="helper_status" translatable="false">Please Select Status</string>
    <string name="lead_value" translatable="false">Lead Value</string>
    <string name="is_public" translatable="false">Is Public</string>
    <string name="no_internet" translatable="false">Internet not available</string>
    <string name="customer_details" translatable="false">Customer Details</string>
    <string name="vat_number" translatable="false">Vat Number</string>
    <string name="add_support" translatable="false">Add Support</string>
    <string name="add_proposals" translatable="false">Add Proposal</string>
    <string name="qty" translatable="false">Qty</string>
    <string name="long_description" translatable="false">Long Description</string>
    <string name="rate" translatable="false">Rate</string>
    <string name="remove" translatable="false">Remove</string>
    <string name="Sub_total_0" translatable="false">SubTota: 0</string>
    <string name="select_taxes" translatable="false">Select Taxes</string>
    <string name="add_attachments" translatable="false">Add Attachment</string>
    <string name="view_invoice_as_customer">View as customer</string>
    <string name="create_credit_note">Create Credit Note</string>
    <string name="copy_invoice">Copy invoice</string>
    <string name="mark_as_sent">Mark as sent</string>
    <string name="add_payment">Add Payment</string>
</resources>