<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".support.presentation.manage.TicketFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:background="@drawable/side_nav_bar"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/total_records"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/total_0"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/filtered_records"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/filtered_0"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/search_bar"
            android:padding="15dp"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:hint="@string/search_here"
            android:inputType="textFilter"
            android:drawableEnd="@drawable/ic_baseline_search_24"
            android:layout_height="wrap_content"
            android:autofillHints="username" />

        <ProgressBar
            style="@android:style/Widget.Holo.ProgressBar.Large"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="visible"
            />
        <include layout="@layout/no_data_found" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:visibility="gone"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/usersList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/add_support"
        android:text="@string/add_support"
        android:textColor="@color/white"
        app:backgroundTint="@color/themeColorPrimary"
        app:iconTint="@color/white"
        app:icon="@drawable/ic_baseline_add_circle_24"/>

</FrameLayout>